# gd32f4_usb_cdc_acm_meson

./: .gitignore  meson.build
config/: debug.txt
inc/: cdc_acm_core.h  gd32f4xx_it.h  usb_conf.h  usb_delay.h  usbd_conf.h
src/: app.c  cdc_acm_core.c  gd32f4xx_it.c  startup_stm32f405xx.s  system_gd32f4xx.c  usb_delay.c
